--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-temp-channels",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "Simple framework to facilitate the creation of a temporary voice channels system using Discord.js",
   "main": "lib/index.js",
   "files": [
@@ -13,7 +13,10 @@
     "lint": "tslint -p tsconfig.json",
     "prepublish": "npm run build"
   },
-  "repository": "git+https://github.com/Androz2091/discord-temp-channels.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Androz2091/discord-temp-channels.git"
+  },
   "author": "Androz2091 <androz2091@gmail.com>",
   "license": "MIT",
   "devDependencies": {
@@ -29,5 +32,9 @@
   },
   "engines": {
     "node": ">=16.9.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Androz2091/discord-temp-channels/issues"
+  },
+  "homepage": "https://github.com/Androz2091/discord-temp-channels#readme"
 }
